# customer-support-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  notes.md  pyproject.toml
.github/workflows/: ci.yml
evals/: eval_set.json  judgements.json  metrics.json  results.json
scripts/: judge_eval_run.py  score_eval_run.py  test_evals.py  test_langfuse.py  test_rag.py  test_retrieval.py
src/customer_support_rag/: classifier.py  client.py  config.py  corpus_downloader.py  embedder.py  evals.py  generator.py  ingestion.py  judge.py  metrics.py  models.py  prompt_tester.py  reranker.py  retrieval.py  vector_store.py
src/customer_support_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_classifier.py  test_ingestion.py  test_metrics.py  test_pydantic_intro.py
