[project]
name = "customer-support-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "b-paquette", email = "b.paquette@celonis.com" }
]
requires-python = ">=3.12.4, <3.15"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "langfuse>=4.7.1",
    "lxml>=6.1.1",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.ruff.lint.pylint]
max-args = 12

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
env = ["LANGFUSE_TRACING_ENABLED=false"]
