[project]
name = "customer-support-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "b-paquette", email = "b.paquette@celonis.com" }
]
requires-python = ">=3.12.4, <3.15"
dependencies = [
    "anthropic>=0.105.2",
    "beautifulsoup4>=4.14.3",
    "bm25s>=0.3.9",
    "chromadb>=1.5.9",
    "langfuse>=4.7.1",
    "lxml>=6.1.1",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-env>=1.6.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.ruff.lint.per-file-ignores]
"src/customer_support_rag/generator.py" = ["E501"]
"src/customer_support_rag/judge.py" = ["E501"]
"tests/*" = ["PLR2004"]

[tool.ruff.lint.pylint]
max-args = 12

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["bm25s", "sentence_transformers", "sentence_transformers.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
env = ["LANGFUSE_TRACING_ENABLED=false"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/customer_support_rag"]
